--- a/src/main/resources/templates/personal/mission.html
+++ b/src/main/resources/templates/personal/mission.html
@@ -71,23 +71,23 @@
     <main class="grid" id="grid"></main>
 
     <!-- 하단 탭: nav.css의 .bottom-nav 구조로 정리 -->
-    <nav class="bottom-nav" aria-label="하단 내비게이션">
+    <nav class="bottom-nav" aria-label="하단탭">
       <div class="bn-inner">
-        <a class="bn-item active" href="/mission" aria-current="page">
-          <span class="i" aria-hidden="true">🏁</span><span>미션</span>
-        </a>
-        <a class="bn-item" href="/map">
-          <span class="i" aria-hidden="true">🗺️</span><span>지도</span>
-        </a>
-        <a class="bn-item" href="/participate">
-          <span class="i" aria-hidden="true">🤝</span><span>참여</span>
-        </a>
-        <a class="bn-item" href="/center">
-          <span class="i" aria-hidden="true">🏢</span><span>센터</span>
-        </a>
-        <a class="bn-item" href="/info">
-          <span class="i" aria-hidden="true">ℹ️</span><span>정보</span>
-        </a>
+        <a class="bn-item" href="http://localhost:11000/"
+          ><span class="ic" aria-hidden="true">🏠</span><span>홈</span></a
+        >
+        <a class="bn-item" href="http://localhost:11000/trash/reportPage"
+          ><span class="ic" aria-hidden="true">🗺️</span><span>지도</span></a
+        >
+        <a class="bn-item" href="http://localhost:11000/personal/mission"
+          ><span class="ic" aria-hidden="true">🤝</span><span>참여</span></a
+        >
+        <a class="bn-item" href="http://localhost:11000/center"
+          ><span class="ic" aria-hidden="true">🏢</span><span>센터</span></a
+        >
+        <a class="bn-item" href="http://localhost:11000/info/guide"
+          ><span class="ic" aria-hidden="true">ℹ️</span><span>정보</span></a
+        >
       </div>
     </nav>
 
